--- a/library_management/biblioteca/doctype/articulo/templates/articulo.html
+++ b/library_management/biblioteca/doctype/articulo/templates/articulo.html
@@ -1,7 +1,28 @@
 {% extends "templates/web.html" %}
 
 {% block page_content %}
-<h1>{{ title }}</h1>
+<div class="py-20 row">
+    <div class="col-sm-2">
+        <img alt="{{ title }}" src="{{ image }}">
+    </div>
+    <div class="col">
+        <h1>{{ title }}</h1>
+        <p class="lead">By {{ author }}</p>
+        <div>
+            {%- if status == 'disponible' -%}
+            <span class="badge badge-success">Disponible</span>
+            {%- elif status == 'Emitido' -%}
+            <span class="badge badge-primary">Emitido</span>
+            {%- endif -%}
+        </div>
+        <div class="mt-4">
+            <div>Publisher: <strong>{{ published }}</strong></div>
+            <div>ISBN: <strong>{{ isbn }}</strong></div>
+        </div>
+        <p>{{ description }}</p>
+    </div>
+</div>
+
 {% endblock %}
 
 <!-- this is a sample default web page template -->
